--- a/src/main/resources/templates/all-articles.html
+++ b/src/main/resources/templates/all-articles.html
@@ -1,52 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>My Music DB Application</title>
-    <link rel="stylesheet" href="/css/reset-css.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <script src="/js/jquery-3.3.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+<html lang="en"
+      xmlns:th="http://thymeleaf.org">
+<head th:insert="fragments/commons::head">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg bg-nav rounded">
-        <a class="nav-link" href="/">
-            <img src="/img/headphones.png" width="40px" alt="HeadPhones picture">
-        </a>
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Admin Panel
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="/">Statistics</a>
-                    <a class="dropdown-item" href="/">Add article</a>
-                    <a class="dropdown-item" href="/">Something else here</a>
-                </div>
-            </div>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-            <ul class="navbar-nav row">
-                    <li class="nav-item col-md-4">
-                        <a class="nav-link text-white active h5" href="/">Login</a>
-                    </li>
-                    <li class="nav-item col-md-4">
-                        <a class="nav-link text-white active h5" href="/">Register</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link text-white active h5" href="/">Add Album</a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link text-white active h5" href="/">All articles</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white active h5" href="/">Logout</a>
-                    </li>
-            </ul>
-        </div>
-    </nav>
-</header>
+
+<header th:replace="fragments/commons::navigation"
+></header>
+</div>
+
 <main class="p-5 align-content-center bg-blur">
     <div class="container">
         <div id="all-articles-jumbotron" class="jumbotron p-3 p-md-5 text-white rounded">
@@ -60,7 +22,6 @@
             <div class="col-md-6">
                 <div class="card flex-md-row mb-4 shadow-sm h-md-250">
                     <div class="card-body d-flex flex-column align-items-start">
-                        <strong class="d-inline-block mb-2 text-primary">Genre</strong>
                         <h3 class="mb-0">Title</h3>
                         <div class="mb-1 text-muted"> Date and time in format dd-MM-yyyy HH:mm</div>
                         <p class="card-text mb-auto">First 60 characters from content + ...</p>
@@ -74,12 +35,8 @@
     </div>
 
 </main>
-<footer class="footer bg-blur">
-    <div class="container-fluid text-center">
-        <div class="h5 text-white">
-            &copy;SoftUni Spring Team 2021. All rights reserved.
-        </div>
-    </div>
+<footer th:insert="fragments/commons::footer">
+
 </footer>
 </body>
 </html>
