--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -47,7 +47,7 @@
 
 
                 <li class="nav-item ">
-                    <a  sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link text-white active h5" href="/albums/add">Add Article</a>
+                    <a  sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link text-white active h5" href="/articles/add">Add Article</a>
                 </li>
                 <li class="nav-item ">
                     <a sec:authorize="isAuthenticated()" class="nav-link text-white active h5" href="/articles/all">All Articles</a>
