Add/All Article Pages

--- a/src/main/resources/templates/add-article.html
+++ b/src/main/resources/templates/add-article.html
@@ -30,7 +30,7 @@
 
                 <div class="col">
                     <label for="homeTMScore">Home Team Score</label>
-                    <input id="homeTMScore" type="text" class="form-control" placeholder="Home team score for the game">
+                    <input id="homeTMScore" type="text" class="form-control" placeholder="Home team game score">
 
                 </div>
             </div>
@@ -44,7 +44,7 @@
 
                 <div class="col">
                     <label for="awayTMScore">Away Team Score</label>
-                    <input id="awayTMScore" type="text" class="form-control" placeholder="Away team score for the game">
+                    <input id="awayTMScore" type="text" class="form-control" placeholder="Away team game score">
 
                 </div>
             </div>
