--- a/src/main/resources/templates/all-articles.html
+++ b/src/main/resources/templates/all-articles.html
@@ -23,7 +23,7 @@
                 <div class="card flex-md-row mb-4 shadow-sm h-md-250">
                     <div class="card-body d-flex flex-column align-items-start">
                         <h3 class="mb-0">Title</h3>
-                        <div class="mb-1 text-muted"> Date and time in format dd-MM-yyyy HH:mm</div>
+                        <div class="mb-1 text-muted"> Date time in format dd-MM-yyyy HH:mm</div>
                         <p class="card-text mb-auto">First 60 characters from content + ...</p>
                         <a href="/">Continue reading</a>
                     </div>
