--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,6 +30,7 @@
                         <input name="username"
                                th:value="*{username}"
                                th:errorclass="is-invalid"
+                               required minlength="5" maxlength="20"
                                type="text"
                                id="inputUsername"
                                class="form-control"
@@ -52,7 +53,8 @@
                         <input name="email"
                                th:value="*{email}"
                                th:errorclass="is-invalid"
-                               type="text"
+                               required
+                               type="email"
                                id="inputEmail"
                                class="form-control"
                                aria-describedby="emailHelpInline">
@@ -70,6 +72,7 @@
                     <div class="col-auto">
                         <input name="password"
                                th:errorclass="is-invalid"
+                               required minlength="5" maxlength="20"
                                type="password"
                                id="inputPassword"
                                class="form-control"
