--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,6 +31,7 @@ xmlns:th="http://thymeleaf.org">
                         <input type="text"
                                name="username"
                                th:value="${username}"
+                               required minlength="5" maxlength="20"
                                id="inputUsername"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
@@ -44,7 +45,9 @@ xmlns:th="http://thymeleaf.org">
                         <label for="inputPassword" class="col-form-label text-light">Password</label>
                     </div>
                     <div class="col-auto">
-                        <input type="password" name="password" id="inputPassword" class="form-control"
+                        <input type="password" name="password"
+                               required minlength="5" maxlength="20"
+                               id="inputPassword" class="form-control"
                                aria-describedby="passwordHelpInline">
                     </div>
                 </div>
