--- a/src/main/resources/templates/all-articles.html
+++ b/src/main/resources/templates/all-articles.html
@@ -11,26 +11,41 @@
 
 <main class="p-5 align-content-center bg-blur">
     <div class="container">
-        <div id="all-articles-jumbotron" class="jumbotron p-3 p-md-5 text-white rounded">
-            <div class="col-md-6 px-0">
-                <h1 class="display-4 font-italic font-weight-bold">Title of the pinned article</h1>
-                <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
-            </div>
+        <div class="mt-5 col-sm-12 my-auto align-self-center">
+            <input id="searchInput" class="form-control mr-sm-2 w-50" type="search"
+                   placeholder="Enter a keyword to start the search" aria-label="Search">
         </div>
 
-        <div class="row mb-2">
-            <div class="col-md-6">
-                <div class="card flex-md-row mb-4 shadow-sm h-md-250">
-                    <div class="card-body d-flex flex-column align-items-start">
-                        <h3 class="mb-0">Title</h3>
-                        <div class="mb-1 text-muted"> Date time in format dd-MM-yyyy HH:mm</div>
-                        <p class="card-text mb-auto">First 60 characters from content + ...</p>
-                        <a href="/">Continue reading</a>
-                    </div>
-                    <img class="card-img-right flex-auto d-none d-lg-block"
-                         src="/" alt="Thumbnail [200x250]" style="width: 200px; height: 250px;">
-                </div>
-            </div>
+        <div class="row mt-5" id="articlesList">
+            <script type="application/javascript">
+
+                const articlesList = document.getElementById('articlesList');
+
+
+                fetch("http://localhost:8000/articles/api")
+                    .then(response => response.json())
+                    .then(data => {
+                        for (let article of data) {
+                            articlesList.innerHTML += `<div class="col-md-6">
+                        <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+                            <div class="card-body d-flex flex-column align-items-start">
+                                <h3 class="card-text border-bottom">${article.title}</h3>
+                                <p class="mb-1 text-muted">${article.createdOn}</p>
+                                <p class="card-text mb-auto">${article.description}</p>
+                                <a href="/static">Continue reading.....</a>
+                            </div>
+                        </div>
+                    </div>`
+
+                        }
+                    });
+
+
+
+
+
+
+            </script>
         </div>
     </div>
 
@@ -38,5 +53,7 @@
 <footer th:insert="fragments/commons::footer">
 
 </footer>
+
+
 </body>
 </html>
