Website Style Makeover

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,6 +13,52 @@
     max-height: 100%;
 }
 
+.nav-item {
+    padding-right: 28px;
+    font-size: 1rem!important;
+}
+
+.h5:hover {
+    color: rgba(153,76,0)!important;
+}
+
+.btn-primary{
+    color: black;
+    background-color: rgba(153,76,0)!important;
+    border: none!important;
+}
+
+.quotes{
+    font-family: 'Signerica Medium', sans-serif;
+    color: white;
+    width: 500px;
+    margin-left: 100px;
+    margin-top: 150px;
+}
+
+.welcome-message{
+    font-family: 'BodonisBulemy', sans-serif;
+    color: white;
+}
+
+.wrapper-welcome{
+    float: right;
+}
+
+#articlesList{
+    overflow: hidden!important;
+}
+
+.col-md-6{
+    overflow: hidden!important;
+    height: 250px!important;
+    white-space: nowrap!important;
+    text-overflow: ellipsis!important;
+
+
+}
+
+
 footer {
     position: absolute;
     width: 100%;
@@ -28,12 +74,14 @@ footer {
 }
 
 body {
-    background-image: url(/img/1.jpg);
+    background-image: url(/img/img.png);
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
     height: 100%;
 }
+
+
 
 .carouselExampleIndicators {
     height: 500px;
@@ -48,11 +96,4 @@ body {
     background-position: center;
 }
 
-input:valid{
-    border: #34ce57 solid 2px;
-}
-
-input:invalid{
-    border: red solid 2px;
-}
 
