--- a/src/main/resources/templates/all-articles.html
+++ b/src/main/resources/templates/all-articles.html
@@ -26,12 +26,12 @@
                     .then(response => response.json())
                     .then(data => {
                         for (let article of data) {
-                            articlesList.innerHTML += `<div class="col-md-6">
+                            articlesList.innerHTML += `<div class="col-md-6 h-50">
                         <div class="card flex-md-row mb-4 shadow-sm h-md-250">
                             <div class="card-body d-flex flex-column align-items-start">
-                                <h3 class="card-text border-bottom">${article.title}</h3>
-                                <p class="mb-1 text-muted">${article.createdOn}</p>
-                                <p class="card-text mb-auto">${article.description}</p>
+                                <h3 class="card-text border-bottom">${article.title.substring(0,35)}</h3>
+                                <p class="mb-1 text-muted">Posted on ${article.createdOn.replace(`Z`, ``).replace(`T`, ` at `).split(`+`)[0]}</p>
+                                <p class="card-text mb-auto">${article.description.substring(0,60)}</p>
                                 <a href="/static">Continue reading.....</a>
                             </div>
                         </div>
