--- a/src/main/resources/templates/add-article.html
+++ b/src/main/resources/templates/add-article.html
@@ -9,6 +9,8 @@
 
 <header th:replace="fragments/commons::navigation"
 ></header>
+
+
 </div>
 <main class="p-5 bg-blur text-center">
     <h1 class="text-light border-bottom">Add Article</h1>
@@ -19,8 +21,8 @@
             <div class="form-row">
                 <div class="col">
                     <label for="title">Article Title</label>
-                    <input th:field="*{title}" id="title" type="text" class="form-control" placeholder="Title">
-                    <small id="titleError" class="form-text bg-danger rounded">Title must be between 3 and 20
+                    <input  th:field="*{title}" id="title" th:errorclass="is-invalid" type="text" class="form-control" placeholder="Title">
+                    <small th:if="${#fields.hasErrors('title')}" id="titleError" class="form-text bg-danger rounded">Title must be between 3 and 20
                         characters</small>
                 </div>
             </div>
@@ -56,7 +58,7 @@
                 <div class="col">
                     <label for="content">Text content</label>
                     <textarea th:field="*{description}" id="content" type="text" class="form-control" placeholder="Game details"></textarea>
-                    <small id="contentError" class="form-text bg-danger rounded">Text content length must be more than 5 characters</small>
+                    <small th:if="${#fields.hasErrors('description')}" id="contentError" class="form-text bg-danger rounded">Text content length must be more than 20 characters</small>
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
