--- a/src/main/resources/templates/all-articles.html
+++ b/src/main/resources/templates/all-articles.html
@@ -32,7 +32,7 @@
                                 <h3 class="card-text border-bottom">${article.title.substring(0,35)}</h3>
                                 <p class="mb-1 text-muted">Posted on ${article.createdOn.replace(`Z`, ``).replace(`T`, ` at `).split(`+`)[0]}</p>
                                 <p class="card-text mb-auto">${article.description.substring(0,60)}</p>
-                                <a href="/static">Continue reading.....</a>
+                                <a href="http://localhost:8000/articles/${article.id}">Continue reading.....</a>
                             </div>
                         </div>
                     </div>`
