Article Details Page, Article Redirect

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -77,6 +77,16 @@
     margin-top: 50px;
 }
 
+#individual-article{
+
+    font-family: Roboto, Arial, sans-serif!important;
+
+}
+
+#link{
+    color: rgba(153,76,0)!important;
+}
+
 
 
 footer {
