--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -20,7 +20,7 @@
         </a>
 
         <div sec:authorize="hasRole('ROLE_ADMIN')" class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-primary btn-sm shadow-none" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Admin Panel
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
