Add Comments to Articles

--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -24,7 +24,7 @@
                 Admin Panel
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="/statistics">STATS</a>
+                <a class="dropdown-item" href="/statistics/all">STATS</a>
                 <a class="dropdown-item" href="/articles/add">ADD ARTICLE</a>
                 <a class="dropdown-item" href="#">Something else here</a>
             </div>
