--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -38,7 +38,7 @@
                     <div class="d-flex flex-column comment-section ">
                         <div class="bg-blur text-light p-2 rounded">
                             <div class="d-flex flex-row user-info">
-                                <img class="rounded-circle" 
+                                <img class="rounded-circle"
                                      width="40">
                                 <div class="d-flex flex-column justify-content-start ml-2">
                                     <span class="d-block font-weight-bold name"></span>
@@ -59,11 +59,11 @@
                             </div>
                         </div>
                         <div class="bg-blur text-light p-2 rounded">
-                            <form action="/comments/add" method="POST">
+                            <form th:object="${commentAddBindingModel}" th:action="@{/articles/} + ${article.id}" method="POST">
                                 <div class="d-flex flex-row align-items-start">
                                     <img class="rounded-circle"
                                          src="https://i.imgur.com/RpzrMR2.jpg"
-                                         width="40"><textarea name="text"
+                                         width="40"><textarea th:field="*{commentContent}" name="text"
                                                               class="form-control ml-1 shadow-none textarea"></textarea>
                                 </div>
                                 <input type="hidden" name="albumId" >
