--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -45,9 +45,13 @@
                     <a class="nav-link text-white active h5" th:href="@{/users/logout}">LOGOUT</a>
                 </li>
 
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a class="nav-link text-white active h5" th:href="@{/users/profile}">PROFILE</a>
+                </li>
+
 
                 <li class="nav-item ">
-                    <a  sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link text-white active h5" href="/articles/add">ADD ARTICLE</a>
+                    <a  sec:authorize="isAuthenticated()" class="nav-link text-white active h5" href="/articles/add">ADD ARTICLE</a>
                 </li>
                 <li class="nav-item ">
                     <a sec:authorize="isAuthenticated()" class="nav-link text-white active h5" href="/articles/all">ALL ARTICLES</a>
