--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,81 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en"
+      xmlns:th="http://thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" xmlns:form="http://www.w3.org/1999/xhtml">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Judge v2</title>
-
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/style.css">
-        <script src="/js/jquery-3.3.1.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-
-    </head>
+<head th:insert="fragments/commons::head">
+</head>
 
 <body>
+<header th:replace="fragments/commons::navigation"
+></header>
 <div class="container">
     <div class="row rounded">
         <div class="col-12">
-               <nav class="navbar navbar-expand-xl navbar-light bg-light rounded" >
-        <a class="navbar-brand" href="/">
-            <h1 class="tm-site-title mb-0">NBA Scores</h1>
-        </a>
-        <button class="navbar-toggler ml-auto mr-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item" >
-                    <a class="nav-link" href="#">
-                        <span>Hello {username}</span>
-                    </a>
-                </li>
-                
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                           role="button" data-toggle="dropdown" aria-haspopup="true"
-                           aria-expanded="false">
-                            Admin
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Add Exercise</a>
-                            <a class="dropdown-item" href="#">Add Role</a>
-
-                        </div>
-                    </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Check Homework</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Add Homework</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-
-                <li class="nav-item">
-                    <a class="nav-link d-flex" href="#">
-                        <span>Logout</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
         </div>
     </div>
     <!-- row -->
     <div class="row tm-mt-big justify-content-center">
         <div class="col-xl-8 col-lg-10 col-md-12 col-sm-12">
-            <div class="bg-white tm-block">
+            <div class="tm-block">
                 <div class="row justify-content-center text-center">
                     <div class="col-12">
                         <h2 class="tm-block-title d-inline-block">User Profile</h2>
@@ -116,12 +58,8 @@
         </div>
     </div>
 
-       <footer class="row">
-        <div class="col-12 container-fluid text-right font-weight-light">
-            <p class="d-inline-block tm-bg-black text-white py-2 px-4">
-                &copy; Spring Team 2020
-            </p>
-        </div>
+    <footer th:insert="fragments/commons::footer">
+
     </footer>
 </div>
 
