--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,28 +25,34 @@
                 </div>
                 <div class="row mt-4 tm-edit-product-row">
                     <div class="col-xl-7 col-lg-7 col-md-12">
-                        <form action="" class="tm-edit-product-form" >
+                        <form th:action="@{/users/profile}"
+                              method="POST" th:object="${userViewModel}" class="tm-edit-product-form" >
                             <div class="input-group mb-3">
                                 <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">
                                     Username
                                 </label>
                                 <input disabled id="name" name="name" type="text"
-                                       class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                       class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" th:value="*{username}">
                             </div>
                             <div class="input-group mb-3">
-                                <label for="homeworks" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">All sent homeworks</label>
-                                <textarea disabled id="homeworks" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" ></textarea>
+                                <label for="bio" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">Bio</label>
+                                <input type="text" name="bio" id="bio" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" th:value="*{bio}"></input>
                             </div>
                             <div class="input-group mb-3">
                                 <label for="email" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Email
                                 </label>
-                                <input disabled id="email"   name="email" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
-                                       data-large-mode="true">
+                                <input id="email"   name="email" type="email" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
+                                       data-large-mode="true" th:value="*{email}">
                             </div>
                             <div class="input-group mb-3">
-                                <label for="git" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Github Address
+                                <label for="firstAndLastName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">First and Last Name
                                 </label>
-                                <input disabled  id="git" name="git" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7">
+                                <input type="text" name="firstAndLastName" id="firstAndLastName" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7" th:value="*{firstAndLastName}">
+                            </div>
+                            <small th:if="${namesError}" id="namesError"
+                                   class="text-light form-text bg-danger rounded">Please, input your first and last name only</small>
+                            <div class="d-flex justify-content-center mt-2">
+                                <button class="btn btn-primary btn-block w-50" type="submit">Update</button>
                             </div>
                         </form>
                     </div>
@@ -58,9 +64,6 @@
         </div>
     </div>
 
-    <footer th:insert="fragments/commons::footer">
-
-    </footer>
 </div>
 
 </body>
