--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -54,7 +54,7 @@
                     <a  sec:authorize="isAuthenticated()" class="nav-link text-white active h5" href="/articles/add">ADD ARTICLE</a>
                 </li>
                 <li class="nav-item ">
-                    <a sec:authorize="isAuthenticated()" class="nav-link text-white active h5" href="/articles/all">ALL ARTICLES</a>
+                    <a class="nav-link text-white active h5" href="/articles/all">ALL ARTICLES</a>
                 </li>
 
 
